# iris_trainer

./: LICENSE  README.md  pyproject.toml
src/iris_trainer_mlotfi/: main.py  model_trainer.py
